# hakoniwa-pdu-bridge-core

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bash  design-web-bridge.md  impl-design.md  index.html  install.bash  uninstall.bash
cmake/: hakoniwa_pdu_bridgeConfig.cmake.in
config/sample/: bridge.json  simple-bridge.json
config/sample/endpoint/: n1-epDst.json  n1-epSrc.json
config/sample/endpoint/cache/: internal_buffer.json  internal_queue.json
config/schema/: bridge-schema.json  ondemand-control-request-schema.json  ondemand-control-response-schema.json
config/tutorials/: bridge-immediate-atomic.json  bridge-immediate.json  bridge-throttle.json  bridge-ticker.json  endpoint_container.json
config/tutorials/comm/: tcp_client_out_9000.json  tcp_client_out_9100.json  tcp_server_in_9000.json  tcp_server_in_9100.json
config/tutorials/endpoint/: bridge-dst.json  bridge-src.json  reader.json  writer.json
config/tutorials/monitor/: client_comm_tcp_9200.json  client_endpoint.json  mux_comm_tcp_server_9200.json  mux_endpoint.json
config/web_bridge/bridge/: bridge.json
config/web_bridge/cache/: latest.json
config/web_bridge/comm/: drone001-shm-callback.json  drone001-websocket-server.json
config/web_bridge/endpoint/: drone001-shm.json  drone001-ws.json  endpoint_container.json
config/web_bridge/monitor/: client_comm_tcp_9200.json  client_endpoint.json  mux_comm_tcp_server_9200.json  mux_endpoint.json
config/web_bridge/pdu/: drone-pdutypes.json
config/web_bridge_fleets/bridge/: bridge.json
config/web_bridge_fleets/comm/: visual-state-shm-callback.json  visual-state-websocket-server.json
config/web_bridge_fleets/endpoint/: endpoint_container.json
config/web_bridge_fleets/pdu/: drone-visual-state-pdutypes.json
docs/tutorials/: README.md  immediate.md  monitor.md  throttle.md  ticker.md
examples/: CMakeLists.txt  bridge_reader.cpp  bridge_writer.cpp
include/hakoniwa/pdu/bridge/: bridge_build_result.hpp  bridge_builder.hpp  bridge_connection.hpp  bridge_core.hpp  bridge_loader.hpp  bridge_monitor_core.hpp  bridge_monitor_runtime.hpp  bridge_types.hpp  monitor_cli_utils.hpp  ondemand_control_handler.hpp  pdu_transfer_policy.hpp  real_time_source.hpp  time_source.hpp  transfer_pdu.hpp  virtual_time_source.hpp
include/hakoniwa/pdu/bridge/policy/: immediate_policy.hpp  throttle_policy.hpp  ticker_policy.hpp
include/hakoniwa/pdu/bridge/time_source/: hakoniwa_time_source.hpp  real_time_source.hpp  time_source.hpp  virtual_time_source.hpp
src/: bridge_builder.cpp  bridge_connection.cpp  bridge_core.cpp  bridge_loader.cpp  bridge_monitor_runtime.cpp  daemon.cpp  monitor_cli_utils.cpp  ondemand_control_handler.cpp  real_time_source.cpp  transfer_pdu.cpp  virtual_time_source.cpp  web_bridge_daemon.cpp
src/policy/: immediate_policy.cpp  throttle_policy.cpp  ticker_policy.cpp
src/time_source/: hakoniwa_time_source.cpp  real_time_source.cpp  virtual_time_source.cpp
test/: CMakeLists.txt  bridge_connection_test.cpp  bridge_core_flow_test.cpp  bridge_core_test.cpp  bridge_loader_test.cpp  bridge_tcp_flow_test.cpp  mock_endpoint.hpp  monitor_cli_utils_test.cpp  ondemand_control_handler_test.cpp  transfer_pdu_test.cpp
test/config/: atomic_endpoints.json  bridge-atomic-core-test.json  bridge-core-flow-test.json  bridge-immediate.json  bridge-invalid.json  bridge-multiple.json  bridge-throttle.json  bridge-throttle2.json  bridge-ticker.json  bridge-ticker2.json  endpoints-multiple.json  endpoints-throttle2.json  endpoints-ticker.json  endpoints.json  n1-epDst.json
test/config/core_flow/: atomic_pdudef.json  bridge-atomic-core-epoch-test.json  bridge-atomic-core-test.json  bridge-core-flow-epoch-test.json  bridge-core-flow-monitor-only-test.json  bridge-core-flow-test.json  endpoints.json  n1-epSrc.json
test/config/core_flow/cache/: internal_buffer.json
test/config/loader/: bridge-immediate.json  bridge-invalid.json  bridge-multiple.json  bridge-throttle.json  bridge-throttle2.json  bridge-ticker.json  bridge-ticker2.json  dummy_endpoint.json  dummy_pdudef.json  endpoints-multiple.json  endpoints-throttle.json  endpoints-ticker2.json
test/config/loader/cache/: internal_queue.json
test/config/policy_fanout/: bridge.json  dst1.json  endpoints.json  pdudef.json  src1.json
test/config/policy_sharing/: bridge.json  dst1.json  dst2.json  endpoints.json  src1.json  src2.json
test/config/tcp/: bridge-atomic.json  bridge.json  comm_client.json  comm_server.json  endpoints-atomic.json  endpoints.json  ep_atomic_local_dst.json  ep_atomic_local_src.json  ep_atomic_wire_client.json  ep_atomic_wire_server.json  ep_local_dst.json  ep_local_src.json  ep_wire_client.json  ep_wire_server.json
test/config/tcp_test/: bridge-atomic.json  bridge.json  ep_local_dst.json  ep_wire_client.json
tools/: bridge_monitor_cli.cpp  check_bridge_config.py  run-web-bridge.bash
